Ignore intermediate files generated by make_csv.py

--- a/.gitignore
+++ b/.gitignore
@@ -112,8 +112,7 @@ venv.bak/
 
 # Training and logging files
 rollout/
-world_models/dataset/car_racing/test_images.txt
-world_models/dataset/car_racing/train_images.txt
+world_models/dataset/car_racing/*.txt
 world_models/train/results/
 world_models/train/vae.pt
 
