--- a/.gitignore
+++ b/.gitignore
@@ -112,7 +112,7 @@ venv.bak/
 
 # Training and logging files
 rollout/
-world_models/dataset/car_racing/*.txt
-world_models/train/results/
-world_models/train/vae.pt
+dataset/car_racing/*.txt
+train/results/
+train/vae.pt
 
